@@ -34,7 +34,7 @@ __gai_start_notify_thread (void)
 {
   sigset_t ss;
   sigemptyset (&ss);
-  __sigprocmask (SIG_SETMASK, &ss, NULL);
+  sigprocmask (SIG_SETMASK, &ss, NULL);
 }
 
 extern inline int
@@ -55,12 +55,12 @@ __gai_create_helper_thread (pthread_t *threadp, void *(*tf) (void *),
   sigset_t ss;
   sigset_t oss;
   sigfillset (&ss);
-  __sigprocmask (SIG_SETMASK, &ss, &oss);
+  sigprocmask (SIG_SETMASK, &ss, &oss);
 
   int ret = pthread_create (threadp, &attr, tf, arg);
 
   /* Restore the signal mask.  */
-  __sigprocmask (SIG_SETMASK, &oss, NULL);
+  sigprocmask (SIG_SETMASK, &oss, NULL);
 
   (void) pthread_attr_destroy (&attr);
   return ret;
